<resources>
    <string name="app_name">Epidaurus</string>
    <string name="app_logo">App Logo</string>
    <string name="app_options">App options</string>
    <string name="placeholder">placeholder</string>
    <string name="back_button">Back button</string>
    <string name="arrow_down">arrow down</string>

    <!-- Welcome activity/Sign Up/Sign In activity -->
    <string name="Register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password (6 char. min.)</string>
    <string name="password_sign_in">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="department_id">Department ID</string>
    <string name="floor_id">Floor ID</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_time">First time?</string>
    <string name="select_department">Select department</string>
    <string name="select_floor">Select floor</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_pass">Invalid password</string>
    <string name="invalid_email_pass">Invalid email or password</string>
    <string name="invalid_login_credentials_please_try_again">Invalid login credentials. Please try again.</string>
    <string name="something_went_wrong">Something went wrong!</string>

    <!-- Departments for Sign Up activity -->
    <string-array name="department_array">
        <item>Select department</item>
        <item>Cardiology</item>
        <item>Pulmonology</item>
        <item>Gastroenterology</item>
        <item>Neurology</item>
    </string-array>

    <!-- Floors for Sign Up activity -->
    <string-array name="floor_array">
        <item>Select floor</item>
        <item>Floor 1</item>
        <item>Floor 2</item>
        <item>Floor 3</item>
    </string-array>

    <!-- Issues for reporting issues -->
    <string-array name="issues_array">
        <item>Select an issue to report</item>
        <item>Wrong patient name</item>
        <item>Wrong date of birth</item>
        <item>Wrong department</item>
        <item>Wrong floor</item>
        <item>Wrong room</item>
        <item>Other</item>
    </string-array>

    <!-- Severity for reporting issues -->
    <string-array name="severity_levels_array">
        <item>Select severity</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <!-- Menu bar options -->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_report_issue">Report Issue</string>

    <!-- Dashboard activity -->
    <string name="dashboard">Dashboard</string>
    <string name="label_btn_patients">My Patients</string>
    <string name="label_btn_notes">Notes</string>
    <string name="label_btn_floor_view">Floor View</string>

    <!-- Account activity -->
    <string name="nurse_profile">Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="label_nurse_name">Full Name</string>
    <string name="label_nurse_email">Email</string>
    <string name="label_nurse_department">Department</string>
    <string name="label_nurse_floor">Floor</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Change">Change Avatar</string>

    <!-- Patient's List activity & Patient's Details -->
    <string name="patients_list">Patients List</string>
    <string name="Current_nurse">Nurse</string>
    <string name="Current_dep">Department</string>
    <string name="Current_floor">, Floor</string>
    <string name="patient_information">Patient\'s Information</string>
    <string name="label_name">Patient\'s Name: </string>
    <string name="place_holder_name">full name place holder</string>
    <string name="label_date_of_birth">Date of Birth: </string>
    <string name="place_holder_date_of_birth">YYYY/MM/DD</string>
    <string name="label_department">Department: </string>
    <string name="place_holder_department">place holder</string>
    <string name="label_room_number">Room #: </string>
    <string name="place_holder_room_number">Room # place holder</string>
    <string name="label_symptoms">Symptoms:</string>
    <string name="place_holder_symptoms">Symptoms place holder</string>
    <string name="label_medical_history">Medical History:</string>
    <string name="place_holder_medical_history">Medical history place holder</string>
    <string name="label_medical_diagnostic">Medical Diagnosis:</string>
    <string name="place_holder_diagnostic">Diagnostic place holder</string>
    <string name="label_btn_vitals">Vitals</string>

    <!-- Notes List activity -->
    <string name="patient_notes">Notes</string>
    <string name="label_author">Author:</string>
    <string name="place_holder_author">Author place holder</string>
    <string name="place_holder_time_date">YYYY/MM/DD HH:MM:SS</string>
    <string name="label_note">Note:</string>
    <string name="place_holder_observation">Observation place holder</string>
    <string name="current_patient">Patient</string>
    <string name="add_note">Add Note</string>
    <string name="type_your_note_here">Type your note here…</string>

    <!-- Vitals List activity -->
    <string name="patient_vitals">Vitals</string>
    <string name="what_went_wrong">What went wrong?</string>
    <string name="please_describe_the_issue">Please describe the issue..</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="app_notification_title">App notifications</string>


    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>