<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/time_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_holder_time_date"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">
        <TextView
            android:id="@+id/authorTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_author"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />
        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/place_holder_author"
            android:textColor="@color/grey"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">
        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_note"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />
        <TextView
            android:id="@+id/observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/place_holder_observation"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_green" />

</LinearLayout>
