<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/medium_green"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".AlertActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/epidaurus_logo"/>

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="FALL DETECTED"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/infoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:background="@drawable/outline_box_green_white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatientDetailsTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/NameTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/label_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
            <TextView
                android:id="@+id/patientDetails_nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="30dp"
                android:text="@string/place_holder_name"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/DOBTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/label_date_of_birth"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
            <TextView
                android:id="@+id/patientDetails_dobTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="30dp"
                android:text="@string/place_holder_date_of_birth"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/DepartmentTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/label_department"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
            <TextView
                android:id="@+id/patientDetails_departmentTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="30dp"
                android:text="@string/place_holder_department"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/RoomTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/label_room_number"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
            <TextView
                android:id="@+id/patientDetails_roomNumTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="30dp"
                android:text="@string/place_holder_room_number"
                android:textColor="@color/dark_green"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        android:text="Patient Profile"/>

    <Button
        android:id="@+id/btnDismiss"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/error_red"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        android:text="Dismiss"/>

</LinearLayout>

