<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="monospace"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/sharp_account_circle_24"
            android:drawablePadding="8dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="8dp" />

        <EditText
            android:id="@+id/DateOfBirthSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawablePadding="8dp"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:padding="8dp" />

        <EditText
            android:id="@+id/emailSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/passwordSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/login_activity_lock_open"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <EditText
            android:id="@+id/passwordConfirmSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/login_activity_lock_open"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <EditText
            android:id="@+id/departmentIdSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/baseline_arrow_forward_24"
            android:drawablePadding="8dp"
            android:hint="@string/department_id"
            android:inputType="number"
            android:padding="8dp" />

        <EditText
            android:id="@+id/RoleIdSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/baseline_arrow_forward_24"
            android:drawablePadding="8dp"
            android:hint="@string/role_id"
            android:inputType="number"
            android:padding="8dp" />

        <EditText
            android:id="@+id/floorIdSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/card_view_boarder"
            android:drawableStart="@drawable/baseline_arrow_forward_24"
            android:drawablePadding="8dp"
            android:hint="@string/floor_id"
            android:inputType="number"
            android:padding="8dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/create_an_account"
            android:textAlignment="gravity"
            android:textColor="@color/button_text_color"
            android:textSize="14sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

