<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-60dp"
        android:background="@drawable/card_view_boarder"
        app:cardBackgroundColor="@color/medium_green"
        app:cardCornerRadius="60dp"
        app:cardElevation="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/Register"
                android:textColor="@color/button_text_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:elevation="20dp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="@string/already_have_an_account"
                android:textSize="12sp" />

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/sign_in"
                android:textColor="@color/button_text_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:elevation="20dp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>